# NCGM

./: .travis.yml  CMakeLists.txt  README.md  main.c  matrix.c  matrix.h  matrix_mpi.c  matrix_mpi.h  matrix_omp.c  matrix_omp.h  optimization.c  optimization.h  optimization_mpi.c  optimization_mpi.h  optimization_omp.c  optimization_omp.h  travis.yml  vector.c  vector.h  vector_omp.c  vector_omp.h
appendix/: Functions.ipynb
tests/: README.md  matrix_benchmarks.c  matrix_benchmarks.h  matrix_tests.c  matrix_tests.h  optimization_benchmarks.c  optimization_benchmarks.h  optimizations_tests.c  optimizations_tests.h  testmain.c  vector_benchmarks.c  vector_benchmarks.h  vector_tests.c  vector_tests.h
